# Isengard

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rust/src/: data.rs  engine.rs  main.rs  mcts.rs  types.rs
scripts/: scrape-poe2db.mjs
src/: actions.ts  demo.ts  index.ts  mcts.ts  mods.ts  monteCarlo.ts  poe2db.ts  policy.ts  probability.ts  routes.ts  sampleData.ts  schema.ts  state.ts  targets.ts  types.ts
src/web/: App.tsx  main.tsx  mctsWorker.ts  styles.css
tests/: engine.test.ts
