[package]
name = "isengard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "isengard"
path = "rust/src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["wayland", "x11"] }
